--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "lib": [ "es2021" ],
         "outDir": "./lib",
         "baseUrl": ".",
+        "noImplicitReturns": false,
         "paths": {
             "@core/*": ["./src/core/*"]
         }
