--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/debug": "^4.1.8",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
@@ -49,7 +50,7 @@
     "validate-branch-name": "^1.3.0"
   },
   "lint-staged": {
-    "*": "npm run lint && git add -A ."
+    "./src/**/*": "npm run lint"
   },
   "validate-branch-name": {
     "pattern": "^(master|main|develop){1}$|^(feat|fix|imp|release)/.+$"
