--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "validate-branch-name": "^1.3.0"
   },
   "lint-staged": {
-    "./src/**/*": "npm run lint"
+    "src/**/*": "npm run lint"
   },
   "validate-branch-name": {
     "pattern": "^(master|main|develop){1}$|^(feat|fix|imp|release)/.+$"
