fix: fixing use of custom error handler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,24 @@
 {
     "extends": "./node_modules/@lottojs/ts-config/base.json",
     "compilerOptions": {
-        "lib": [ "es2021" ],
+        "lib": [
+            "es2021"
+        ],
         "outDir": "./lib",
         "baseUrl": ".",
         "noImplicitReturns": false,
         "paths": {
-            "@core/*": ["./src/core/*"]
+            "@core/*": [
+                "./src/core/*"
+            ]
         }
     },
-    "include": ["src/**/*", "sample/**/*"],
+    "include": [
+        "src/**/*"
+    ],
     "ts-node": {
-        "require": ["tsconfig-paths/register"]
+        "require": [
+            "tsconfig-paths/register"
+        ]
     }
 }
